# CarSimCpp

./: .gitignore  CMakeLists.txt  LICENSE  buildit.sh  carsim_main  compile_commands.json  config.json  junk.txt  main.cpp  plot_tire_results.py  run_tests.sh  testMassSpring.cpp  vehicle_sim
Car/: BicycleModel.cpp  BicycleModel.h  CMakeLists.txt  Car.h  CarConstants.h  HighFidelity.cpp  HighFidelity.h
CarSimCppObsidianVault/.obsidian/: appearance.json  workspace.json
CarSimCppObsidianVault/TireModelling/: Pacejka Params.md
Common/: GlobalConstants.h
Data/TIR_Templates/: FSAE_Defaults.tir  H_R20_18X6_6.tir  H_R20_18X6_7.tir  H_R25B_18X6_6.tir
Integrator/: CMakeLists.txt  Dopr853.cpp  Dopr853.h  Dopr853Constants.h  DormandPrince853.h  EulerIntegrator.cpp  EulerIntegrator.h  Integrator.h  IntegratorBase.h  PIController.cpp  PIController.h  RK4Integrator.cpp  RK4Integrator.h
Refactor/: BicycleModel.cpp.old
Sim/: Sim.h
Test/: CMakeLists.txt  MassSpringDamper.h  main.cpp  parserTest  testMassSpring.cpp  testMassSpring.old  testTireModel.cpp  testTireModelDebug.cpp  testTireModelDebugDetailed.cpp  testTireModelLoadDependence.cpp
TireModel/: CMakeLists.txt  LinearTireModel.h  MFCoefficients.cpp  MFCoefficients.h  MFTireModel.cpp  MFTireModel.h  TireModel.h
Tools/Python/: checkSimout.ipynb  plotSimOutput.ipynb  plot_tire_results.py  plot_tire_results_simple.py  tirParser.ipynb
Utils/: CMakeLists.txt  MathTools.h  Telemetry.h  Telemetry.h.backup  TirParser.cpp  TirParser.h
